library_includedir = $(includedir)/tscpp/api

library_include_HEADERS = \
        Async.h \
        AsyncHttpFetch.h \
        AsyncTimer.h \
        CaseInsensitiveStringComparator.h \
        ClientRequest.h \
        Continuation.h \
        GlobalPlugin.h \
        GzipDeflateTransformation.h \
        GzipInflateTransformation.h \
        Headers.h \
        HttpMethod.h \
        HttpStatus.h \
        HttpVersion.h \
        InterceptPlugin.h \
        Logger.h \
        Plugin.h \
        PluginInit.h \
        RemapPlugin.h \
        Request.h \
        Response.h \
        Stat.h \
        Transaction.h \
        TransactionPlugin.h \
        TransformationPlugin.h \
        Url.h \
        noncopyable.h \
        utils.h
